--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,63 +9,113 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Google Stylesheets -->
+    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
+
+    <!-- CSS Stylesheets -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="/stylesheets/styles.css">
+     
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/3009bbfc69.js"></script>
+  
+    <!-- Bootstrap Scripts -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"></script>
 
-
+      
   </head>
 
   <body>
+  <div class="col-md-10 col-md-offset-1">
 
-    <nav class="navbar navbar-default">
-      <div class="container">
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> 
+ 
+          <a class="navbar-brand" href="/"><p><h4>Programming Forum</h4></p></a>
+        
+ 
+          <ul class = "navbar-nav ml-auto"> 
+            <li class="nav-item">
+              <% if logged_in? && current_user.admin? %>
+                <%= link_to "Admin Panel", admin_root_path, class: 'nav-link' %>
+              <% end %>
+             </li>
 
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/">Programming Forum</a>
-        </div>
+            <li class="nav-item">
+              <%= link_to "All Questions", questions_path, class: 'nav-link' %> 
+            </li>
 
-          <ul class = "nav navbar-nav navbar-right">
+            <% if logged_in? %>
+              <li class="nav-item">
+                <%= link_to "My Stuff", user_path(current_user), class: 'nav-link' %> 
+              </li>
 
-            <% if logged_in? && current_user.admin? %>
-                <li><%= link_to "Admin Panel", admin_root_path %></li>
+              <li class="nav-item">
+                <%= link_to "Ask Question", new_question_path, class: 'nav-link' %> 
+              </li>
+
+              <li class="nav-item">
+                <%= link_to "Log Out", logout_path, method: :delete, class: 'nav-link' %> 
+              </li>
+
             <% end %>
 
-              <li><%= link_to "All Questions", questions_path, class: 'navlink' %> </li>
-              <!--<li><%= link_to "All Categories", categories_path, class: 'navlink' %> </li> -->
-              
-              <% if logged_in? %>
-                <li><%= link_to "My Stuff", user_path(current_user), class: 'navlink' %> </li>
-                <li><%= link_to "Ask Question", new_question_path, class: 'navlink' %> </li>
-                <li><%= link_to "Log Out", logout_path, method: :delete, class: 'navlink' %> </li>
-              <% end %>
- 
+            <li class="nav-item"> 
+              <%= render 'search/form' %> 
+            </li>
+
           </ul>
-         
-      </div>
-      
+
     </nav>
+  
+
+
+ 
      <% if logged_in? %>
       <div class="container"> Welcome, <%= current_user.username %>! </div>
      <% end %>
 
-     <div class="container"><% flash.each do |name, msg| %>
+      <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, class: "alert alert-info" %>
       <% end %>
-      </div>
-
       
-      <div class="row">
-      <%= form_tag(search_path, method: :get) do %>
+
+       <!--
+       <%= form_tag(search_path, method: :get) do %>
         <div class="form-group text-center">
             Tag <%= text_field_tag :name %>
             <button type="submit"><i class="fa fa-search", style="color:green"></i></button>
         </div>
       <% end %>
+      -->
+
+
+
+   
+
+      <div class="col-md-1 pull-right">
+          <div class="sidebar">
+            <ul class="nav nav-pills nav-stacked">
+              <li><% Category.all.each do |c| %></li>
+              <li><%= link_to c.name.upcase, category_path(c) %></li>
+              <% end %>
+            </ul>
+        </div>
+      </div>
 
 
     <%= yield %>
-
+ 
+ 
   </body>
 </html>
 
