--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 <br>
 
 <h4> Questions that I answered </h4>
-<%= render partial: 'questions/answered', collection: @my_answers %>
+<%= render partial: 'questions/question', collection: @answered_questions %>
 <br>
 
 <h4> My open questions</h4>
