--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -6,6 +6,6 @@
 <br/>
 <br/>
 
- <%= link_to "Add Answer", new_question_answer_path, class:"btn" %>
+ <%= link_to "Add Answer", new_question_answer_path, class:"btn btn-info" %>
 
  </div>
