--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="/stylesheets/styles.css">
+    <link rel="stylesheet" href="/stylesheets/application.scss">
      
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/3009bbfc69.js"></script>
   
     <!-- Bootstrap Scripts -->
+    
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"></script>
@@ -36,13 +37,19 @@
   </head>
 
   <body>
-  <div class="col-md-10 col-md-offset-1">
+
 
      <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> 
  
           <a class="navbar-brand" href="/"><p><h4>Programming Forum</h4></p></a>
         
- 
+          <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+
+          <ul class = "navbar-nav ml-auto"> 
+             <li class="nav-item"><%= render 'search/form' %> </li> 
+          </ul>
+
+
           <ul class = "navbar-nav ml-auto"> 
             <li class="nav-item">
               <% if logged_in? && current_user.admin? %>
@@ -68,16 +75,14 @@
               </li>
 
             <% end %>
-
-            <li class="nav-item"> 
-              <%= render 'search/form' %> 
-            </li>
+ 
 
           </ul>
+        </div>
 
     </nav>
   
-
+    <div class="col-md-10 col-md-offset-1">  
 
  
      <% if logged_in? %>
@@ -89,19 +94,7 @@
       <% end %>
       
 
-       <!--
-       <%= form_tag(search_path, method: :get) do %>
-        <div class="form-group text-center">
-            Tag <%= text_field_tag :name %>
-            <button type="submit"><i class="fa fa-search", style="color:green"></i></button>
-        </div>
-      <% end %>
-      -->
-
-
-
-   
-
+  
       <div class="col-md-1 pull-right">
           <div class="sidebar">
             <ul class="nav nav-pills nav-stacked">
