--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -9,7 +9,7 @@
 
     <div class="questions-today col-md-3">
         <div class="card">
-            <div class="card-header">
+            <div class="card-header text-center">
               <h4>New today </h4>
             </div>
             <div class="card-body">
@@ -24,7 +24,7 @@
 
     <div class="questions-unanswered col-md-3">
       <div class="card">
-        <div class="card-header">  
+        <div class="card-header text-center">  
           <h4>Unanswered questions </h4>
         </div>
         <div class="card-body">
@@ -40,7 +40,7 @@
   
   <div class="questions-newest col-md-3">
     <div class="card">
-      <div class="card-header">  
+      <div class="card-header text-center">  
         <h4>Most liked questions </h4>
       </div>
       <div class="card-body">
@@ -56,7 +56,7 @@
 <!--
     <div class="questions-popular col-md-3">
       <div class="card">
-        <div class="card-header">   
+        <div class="card-header text-center">   
           <h4>Most answered questions </h4>
         </div>
 
@@ -74,7 +74,7 @@
 
     <div class="questions-newest col-md-3">
       <div class="card">
-        <div class="card-header">  
+        <div class="card-header text-center">  
           <h4>All questions </h4>
         </div>
         <div class="card-body">
