--- a/app/views/search/_form.html.erb
+++ b/app/views/search/_form.html.erb
@@ -1,7 +1,7 @@
 <br/>
 <%= form_tag(search_path, method: :get) do %>
     <div class="form-group text-center">
-        Tag <%= text_field_tag :name %>
+     <strong><div style="color:grey">  Tag </strong><%= text_field_tag :name %>
         <button type="submit"><i class="fa fa-search", style="color:green"></i></button>
     </div>
   <% end %>
