--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -7,6 +7,7 @@
     <p>Tag <%= @search_tag %> not found. </p>
 <% end %>
 
-<%= link_to "Back to Questions", questions_path %>
+<br/>
+<%= link_to "Back to Questions", questions_path, class:"btn btn-info" %>
 
 </div>
