--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,71 @@
-<div class="col-md-10 col-md-offset-1">
+<div class="col text-center">
+    <h3><%= current_user.username %>'s Page </h3>
+</div>
+
+<div class="row">
+
+    <div class="activities col-md-3">
+        <div class="card">
+            <div class="card-header text-center">
+            <h4>My activities by category </h4>
+            </div>
+            <div class="card-body">
+                <% if @categories %>
+                    <%= render @categories %>
+                <% else %>
+                    <p>None </p>
+                <% end %>
+            </div>
+        </div>
+    </div>
+
+    <div class="answered col-md-3">
+        <div class="card">
+            <div class="card-header text-center">
+            <h4>Questions I answered</h4>
+            </div>
+            <div class="card-body">
+                <% if @answered_questions %>
+                <%= render partial: 'questions/question', collection: @answered_questions %>
+                <% else %>
+                    <p>None </p>
+                <% end %>
+            </div>
+        </div>
+    </div>
+
+    <div class="open col-md-3">
+        <div class="card">
+            <div class="card-header text-center">
+            <h4>My open questions</h4>
+            </div>
+            <div class="card-body">
+                <% if @my_questions.unanswered %>
+                <%= render partial: 'questions/question', collection: @my_questions.unanswered %>
+                <% else %>
+                    <p>None </p>
+                <% end %>
+            </div>
+        </div>
+    </div>
+
  
-<h3> <%= current_user.username %>'s Page </h3>
-<br>
+    <div class="open col-md-3">
+        <div class="card">
+            <div class="card-header text-center">
+            <h4>Questions I liked</h4>
+            </div>
+            <div class="card-body">
+                <% if @my_likes %>
+                <%= render partial: 'questions/question', collection: @my_likes %>
+                <% else %>
+                    <p>None </p>
+                <% end %>
+            </div>
+        </div>
+    </div>
 
-<h4> My activities by category </h4>
-<%= render @categories %>
-<br>
-
-<h4> Questions that I answered </h4>
-<%= render partial: 'questions/question', collection: @answered_questions %>
-<br>
-
-<h4> My open questions</h4>
-<%= render partial: 'questions/question', collection: @my_questions.unanswered %>
-<br>
-
-<h4> Questions I liked:</h4>
-<%= render partial: 'questions/question', collection: @my_likes %>
-<br>
-
+    </div>
  
- </div>
+ 
+ 
